[tool.poetry]
name = "provisio-lib"
version = "0.1.0"
description = ""
authors = ["Danila <63115678+DDonnyy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
momepy = "^0.7.0"
osmnx = "^1.9.1"
pulp = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
